# WasmEdge-image

./: .CurrentChangelog.md  CMakeLists.txt  Changelog.md  README.md
.github/workflows/: build.yml  release.yml
include/: CMakeLists.txt  image_base.h  image_func.h  image_module.h  ssvm-image.h  wasmedge-image.h
include/wasmedge/: wasmedge-image.h
lib/: CMakeLists.txt  image_func.cpp  image_module.cpp  ssvm-image.cpp  wasmedge-image.cpp
utils/png/: LICENSE
